--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Receitas Deliciosas</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Inclusão do jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
   <header>
@@ -19,27 +21,64 @@
   </header>
 
   <main>
-    <section class="recipe-card">
-      <img src="https://via.placeholder.com/600x400" alt="Imagem do Bolo de Chocolate">
-      <div class="recipe-content">
-        <h2>Bolo de Chocolate</h2>
-        <p>Um bolo delicioso e fácil de fazer, perfeito para qualquer ocasião.</p>
-        <a href="#" class="btn">Ver Receita</a>
-      </div>
-    </section>
+    <div class="carousel">
+      <div class="carousel-inner">
+        <div class="recipe-card">
+          <img src="https://via.placeholder.com/600x400" alt="Imagem do Bolo de Chocolate">
+          <div class="recipe-content">
+            <h2>Bolo de Chocolate</h2>
+            <p>Um bolo delicioso e fácil de fazer, perfeito para qualquer ocasião.</p>
+            <a href="#" class="btn">Ver Receita</a>
+          </div>
+        </div>
 
-    <section class="recipe-card">
-      <img src="https://via.placeholder.com/600x400" alt="Imagem da Salada Colorida">
-      <div class="recipe-content">
-        <h2>Salada Colorida</h2>
-        <p>Refrescante e saudável, ideal para acompanhar suas refeições.</p>
-        <a href="#" class="btn">Ver Receita</a>
+        <div class="recipe-card">
+          <img src="https://via.placeholder.com/600x400" alt="Imagem da Salada Colorida">
+          <div class="recipe-content">
+            <h2>Salada Colorida</h2>
+            <p>Refrescante e saudável, ideal para acompanhar suas refeições.</p>
+            <a href="#" class="btn">Ver Receita</a>
+          </div>
+        </div>
       </div>
-    </section>
+      <button class="carousel-control prev">‹</button>
+      <button class="carousel-control next">›</button>
+    </div>
   </main>
 
   <footer>
     <p>&copy; 2025 Receitas Deliciosas. Todos os direitos reservados.</p>
   </footer>
+
+  <!-- Script jQuery para o carrossel -->
+  <script>
+    $(document).ready(function() {
+      // Inicialmente, esconde todos os cards e mostra o primeiro
+      $('.recipe-card').hide();
+      $('.recipe-card').first().show();
+
+      $('.next').click(function() {
+        var current = $('.recipe-card:visible');
+        var next = current.next('.recipe-card');
+        if (next.length === 0) {
+          next = $('.recipe-card').first();
+        }
+        current.fadeOut(500, function() {
+          next.fadeIn(500);
+        });
+      });
+
+      $('.prev').click(function() {
+        var current = $('.recipe-card:visible');
+        var prev = current.prev('.recipe-card');
+        if (prev.length === 0) {
+          prev = $('.recipe-card').last();
+        }
+        current.fadeOut(500, function() {
+          prev.fadeIn(500);
+        });
+      });
+    });
+  </script>
 </body>
 </html>
