--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Receitas Deliciosas</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
   <!-- Inclusão do jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
@@ -50,35 +50,7 @@
     <p>&copy; 2025 Receitas Deliciosas. Todos os direitos reservados.</p>
   </footer>
 
-  <!-- Script jQuery para o carrossel -->
-  <script>
-    $(document).ready(function() {
-      // Inicialmente, esconde todos os cards e mostra o primeiro
-      $('.recipe-card').hide();
-      $('.recipe-card').first().show();
-
-      $('.next').click(function() {
-        var current = $('.recipe-card:visible');
-        var next = current.next('.recipe-card');
-        if (next.length === 0) {
-          next = $('.recipe-card').first();
-        }
-        current.fadeOut(500, function() {
-          next.fadeIn(500);
-        });
-      });
-
-      $('.prev').click(function() {
-        var current = $('.recipe-card:visible');
-        var prev = current.prev('.recipe-card');
-        if (prev.length === 0) {
-          prev = $('.recipe-card').last();
-        }
-        current.fadeOut(500, function() {
-          prev.fadeIn(500);
-        });
-      });
-    });
-  </script>
+  <!-- Inclusão do arquivo externo com o código jQuery -->
+  <script src="assets/js/scripts.js"></script>
 </body>
 </html>
