--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Receitas Deliciosas</h1>
-    <nav>
+    <nav aria-label="Menu de navegação">
       <ul>
         <li><a href="#">Início</a></li>
         <li><a href="#">Receitas</a></li>
@@ -21,29 +21,29 @@
   </header>
 
   <main>
-    <div class="carousel">
+    <section class="carousel" aria-label="Carrossel de Receitas">
       <div class="carousel-inner">
-        <div class="recipe-card">
+        <article class="recipe-card">
           <img src="https://via.placeholder.com/600x400" alt="Imagem do Bolo de Chocolate">
           <div class="recipe-content">
             <h2>Bolo de Chocolate</h2>
             <p>Um bolo delicioso e fácil de fazer, perfeito para qualquer ocasião.</p>
             <a href="#" class="btn">Ver Receita</a>
           </div>
-        </div>
+        </article>
 
-        <div class="recipe-card">
+        <article class="recipe-card">
           <img src="https://via.placeholder.com/600x400" alt="Imagem da Salada Colorida">
           <div class="recipe-content">
             <h2>Salada Colorida</h2>
             <p>Refrescante e saudável, ideal para acompanhar suas refeições.</p>
             <a href="#" class="btn">Ver Receita</a>
           </div>
-        </div>
+        </article>
       </div>
-      <button class="carousel-control prev">‹</button>
-      <button class="carousel-control next">›</button>
-    </div>
+      <button class="carousel-control prev" aria-label="Receita anterior">‹</button>
+      <button class="carousel-control next" aria-label="Próxima receita">›</button>
+    </section>
   </main>
 
   <footer>
