adicionando imagens + corrigindo resolucao

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Receitas Deliciosas</title>
   <link rel="stylesheet" href="assets/css/styles.css">
-  <!-- Inclusão do jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -24,7 +23,7 @@
     <section class="carousel" aria-label="Carrossel de Receitas">
       <div class="carousel-inner">
         <article class="recipe-card">
-          <img src="https://via.placeholder.com/600x400" alt="Imagem do Bolo de Chocolate">
+          <img src="assets/image/bolo-chocolate-resized.jpeg" alt="Imagem do Bolo de Chocolate">
           <div class="recipe-content">
             <h2>Bolo de Chocolate</h2>
             <p>Um bolo delicioso e fácil de fazer, perfeito para qualquer ocasião.</p>
@@ -33,7 +32,7 @@
         </article>
 
         <article class="recipe-card">
-          <img src="https://via.placeholder.com/600x400" alt="Imagem da Salada Colorida">
+          <img src="assets/image/salada-colorida-resized.jpeg" alt="Imagem da Salada Colorida">
           <div class="recipe-content">
             <h2>Salada Colorida</h2>
             <p>Refrescante e saudável, ideal para acompanhar suas refeições.</p>
@@ -46,11 +45,6 @@
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Receitas Deliciosas. Todos os direitos reservados.</p>
-  </footer>
-
-  <!-- Inclusão do arquivo externo com o código jQuery -->
   <script src="assets/js/scripts.js"></script>
 </body>
 </html>
