Adicionei o footer novamente.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       <button class="carousel-control next" aria-label="Próxima receita">›</button>
     </section>
   </main>
-
+  <footer>
+    <p>@2025. Todos os direitos reservados</p>
+  </footer>
   <script src="assets/js/scripts.js"></script>
 </body>
 </html>
